# STAT6207_project

./: .gitignore  Data Processing and Analysis final.ipynb  Data Processing and Analysis.ipynb  README.md  STAT5102_2023.py  Sale data reformating.ipynb  Sale data reformating_final.ipynb  baseline_model.ipynb  data_cleansing.py  expand_quarterly_sales_retail.csv  expand_quarterly_sales_roadshow.csv  feature_selection_v1.py  image_to_embeddings.ipynb  main.py  nn_test.ipynb  nn_test_3.ipynb  nn_test_4_numeric_only.ipynb  nn_test_4_numeric_only.py  pyproject.toml  regressor_mini.py  summarize_sales_retail.csv  summarize_sales_roadshow.csv  targetbook.json  test.ipynb  train_model_v1.py
ae_results/: encoder_weights.pth
data/: X_test.npy  X_test_with_isbn.csv  amazon.csv  amazon_cleaned.csv  backtest.csv  backtest.xlsx  backtest_v2.csv  backtest_v2.xlsx  books_api.csv  books_api_cleaned.csv  merged.csv  merged.xlsx  merged2.csv  merged2.xlsx  merged3.csv  merged3.xlsx  merged3_std.csv  merged3_std.xlsx  merged3_std_dummy.csv  merged3_std_dummy.xlsx  merged4.csv  merged4.xlsx  merged4_std.csv  merged4_std.xlsx  merged4_std_dummy.csv  merged4_std_dummy.xlsx  merged5.csv  merged5_std_dummy.csv  merged5_std_dummy.xlsx  product_9780064450836.html  purchase.csv  purchase.xlsx  purchase_v2.csv  purchase_v2.xlsx  scrape_results.csv  target_series_new_with_features2.csv  target_series_new_with_features2.xlsx  y_test.npy  y_test_with_isbn.csv  y_train.npy  (+1 more)
image_embeddings/: 9780007371082.npy  9780007453580.npy  9780008201487.npy  9780008304607.npy  9780008363994.npy  9780008430306.npy  (+1329 more)
test/: test.py  (+2 more)
(+79 files in other folders)
