[project]
name = "stat6207-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "connectorx>=0.4.4",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "selenium>=4.38.0",
    "sqlalchemy>=2.0.44",
]
